# bareclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  README.md  SECURITY.md  build.zig  build.zig.zon
docs/: audit-logging.md  bareclaw_review.md  hardware-peripherals-design.md  mcp-development.md  network-deployment.md
mcp/: README.md  pyproject.toml  server.py
src/: agent.zig  channels.zig  config.zig  cron.zig  daemon.zig  gateway.zig  main.zig  mcp_client.zig  memory.zig  migration.zig  peripherals.zig  provider.zig  root.zig  security.zig  tools.zig
tests/: integration_discord.sh  smoke.sh
