[project]
name = "bareclaw-mcp"
version = "0.1.0"
description = "MCP server for BareClaw – agent-driven development harness"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
bareclaw-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
